--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,9 @@ PORT = 8000
 
 MONGODB_URL =mongodb+srv://skpsystaldyn:gwwANxjq0Uwpjh0Y@cluster0.bss13ds.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+MAIL_HOST = 
+MAIL_USER = 
+MAIL_PASS = 
+
+
+JWT_SECRET = studynotion
