testing of user and changing model changes

--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ PORT = 8000
 
 MONGODB_URL =mongodb+srv://skpsystaldyn:gwwANxjq0Uwpjh0Y@cluster0.bss13ds.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-MAIL_HOST = 
-MAIL_USER = 
-MAIL_PASS = 
+MAIL_HOST = smtp.gmail.com
+MAIL_USER = skpsystaldyn@gmail.com
+MAIL_PASS = unvk urpm ncio zatl
 
 
 JWT_SECRET = studynotion
