--- a/server/.env
+++ b/server/.env
@@ -6,5 +6,10 @@ MAIL_HOST = smtp.gmail.com
 MAIL_USER = skpsystaldyn@gmail.com
 MAIL_PASS = unvk urpm ncio zatl
 
-
 JWT_SECRET = studynotion
+
+CLOUD_NAME = dpo4oxvjn
+API_KEY = 546658927265832
+API_SECRET = 2GEyHZ6RTQufJqJaL9v7hoo8KAM
+
+FOLDER_NAME = studynotion
