--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "nodemailer": "^6.9.14",
