--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
@@ -23,7 +24,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-type-animation": "^3.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.24.7",
