--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.24.1",
     "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.9",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
