--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.24.8",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "copy-to-clipboard": "^3.3.3",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
